--- a/Makefile.dep
+++ b/Makefile.dep
@@ -664,6 +664,8 @@ ifneq (,$(filter js,$(USEMODULE)))
   USEPKG += jerryscript
   USEMODULE += xtimer
   USEMODULE += event
+  USEMODULE += saul_reg
+  USEMODULE += saul_default
 endif
 
 # include package dependencies
