WIP: buffer/stack size changes

--- a/examples/javascript/Makefile
+++ b/examples/javascript/Makefile
@@ -22,7 +22,7 @@ BOARD_BLACKLIST := arduino-duemilanove arduino-mega2560 arduino-uno chronos \
 CFLAGS += -DDEVELHELP
 
 # Set stack size to something (conservatively) enormous
-CFLAGS += -DTHREAD_STACKSIZE_MAIN=4096
+CFLAGS += -DTHREAD_STACKSIZE_MAIN=4096 -g -fstack-usage -DGCOAP_STACK_SIZE=2048
 export JERRYHEAP=8
 
 USEMODULE += js
@@ -34,6 +34,8 @@ USEMODULE += gnrc_ipv6_router_default
 # Additional networking modules that can be dropped if not needed
 USEMODULE += gnrc_icmpv6_echo
 USEMODULE += gcoap
+
+CFLAGS += -DGCOAP_PDU_BUF_SIZE=512 -DGNRC_PKTBUF_SIZE=2048
 
 include $(CURDIR)/../../Makefile.include
 
